# go-grst-boilerplate

./: .air.toml  .dockerignore  .env.example  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  Dockerfile  GO_FIBER_DDD_BOILERPLATE.md  LICENSE  Makefile  README.md  SUMMARY.md  buf.gen.yaml  buf.yaml  claude.md  docker-compose.yml  go.mod  go.sum  main.go  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md
.claude/rules/: api-responses.md  architecture.md  code-review-checklist.md  codebase-conventions.md  coding-standards.md  commands.md  database.md  goroutines.md  logging.md  project-overview.md  redis.md  security.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
apps/ai/: .env.example  README.md  package.json  tsconfig.json
apps/api/: .env.example  go.mod  (+4 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: main.rs
config/: bootstrap.go  config.go  database.go  fiber.go  infisical.go  logger.go  observability_test.go  redis.go  telemetry.go
contract/: user.proto
docs/: scalar.go  swagger.go
entity/: payslip.go  user.go
examples/: gorm_performance_example.go  paseto_authenticated_flow_example.go  paseto_authenticated_flow_example_test.go
handler/: user_handler.go
migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql  000002_create_payslips_table.down.sql  000002_create_payslips_table.up.sql  000003_create_audit_logs_table.down.sql  000003_create_audit_logs_table.up.sql
(+134 files in other folders)
