[package]
name = "veemon-web"
version = "0.0.0"
description = "Veemon web desktop shell"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "veemon_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
